# VidyamargAI

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  hireai.db  package.json  railway.toml  task.md  test_temp.db
backend/: .env  Dockerfile  hireai.db  import_apify_jobs.py  main.py  migrate_sync_tables.py  pyproject.toml  railway.toml  requirements.txt  run_discovery_scratch.py  setup_local_trigger.py  test_courses.py  test_crawler.py  test_integration.py
backend/ai_os/: __init__.py  kernel.py
backend/ai_os/execution/: circuit_breaker.py
backend/ai_os/executor/: executor.py
backend/ai_os/intent_engine/: engine.py
backend/ai_os/policy/: permission_engine.py  policy_engine.py
backend/ai_os/reasoning_engine/: engine.py
backend/ai_os/reflection/: reflection.py
backend/ai_os/registry/: agent_registry.py  tool_sdk.py
backend/ai_os/schemas/: goal.py  task.py  tool.py
backend/ai_os/security/: consent_engine.py
backend/ai_os/verification/: verification.py
backend/alembic/: env.py
backend/alembic/versions/: 2861121fe5ce_drop_legacy_archive_tables.py  551d91c5cdd8_add_indexes_for_fk_columns.py  b170c4e86c6d_add_missing_fk_indexes.py  b4ce3f8c47ca_add_performance_indexes.py  b8e37daa1ace_add_auto_apply.py  c9f2_add_curriculum_indexes.py  d5f303fbe12b_drop_job_tables.py
backend/app/: __init__.py  main.py
backend/scratch/: test_consumer_groups.py  test_qdrant_dimension.py
backend/tests/: test_agent_suite.py  test_auto_apply.py  test_forgot_password.py  test_gateway_and_consents.py  test_job_discovery_v2.py  test_resume_failover.py  test_resume_job_matching.py  test_smoke.py  test_smoke_v2.py  test_telegram_and_consistency.py  test_vector_store.py
backend_v2/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend_v2/alembic/: env.py
backend_v2/app/: __init__.py
(+480 files in other folders)
