[tool.poetry]
name = "vidyamarg-backend-v2"
version = "2.0.0"
description = "VidyaMarg AI Career Intelligence Operating System Backend v2"
authors = ["VidyaMarg Team"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "packages" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
redis = {extras = ["hiredis"], version = "^5.0.3"}
qdrant-client = "^1.8.2"
celery = "^5.3.6"
apscheduler = "^3.10.4"
httpx = "^0.27.0"
orjson = "^3.9.15"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
websockets = "^12.0"
python-dotenv = "^1.0.1"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-instrumentation-fastapi = "^0.44b0"
prometheus-client = "^0.20.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
black = "^24.3.0"
ruff = "^0.3.4"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
