[project]
name = "vidyamarg-job-discovery"
version = "2.0.0"
description = "VidyaMarg AI — Autonomous Job Discovery Platform"
readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]

[tool.uv.sources]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
